Обновлен файл pages/gallery.html - изменены названия фотографий на 'my photo'

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,16 +7,13 @@
 </head>
 <body>
     <h1>Галерея</h1>
-    <h2>Моя собачка Рекс</h2>
-    <img src="../photo/собака.jpg" alt="Рекс" width="200">
+    <p>Ось деякі з моїх улюблених фотографій:</p>
     
-    <h2>Мій котик Мурка</h2>
-    <img src="../photo/котик.jpg" alt="Мурка" width="200">
-    
-    <h2>Навігація</h2>
-    <ul>
-        <li><a href="../index.html">Головна</a></li>
-        <li><a href="contact.html">Контакти</a></li>
-    </ul>
+    <div class="gallery">
+        <img src="../photo/my_photo.jpg" alt="Опис фото 1" width="300">
+        <img src="../photo/my_photo1.jpg" alt="Опис фото 2" width="300">
+        <img src="../photo/my_photo2.jpg" alt="Опис фото 3" width="300">
+        <!-- Додайте інші фотографії за необхідності -->
+    </div>
 </body>
 </html>
